beef (1.0.2-1) unstable; urgency=low

  * New upstream release

  * Security
    - Enable +bindnow hardening option
    - Use HTTPS wherever possible

  * Other
    - Update Standards-Version to 3.9.8
      - No changes needed

 -- Andrea Bolognani <eof@kiyuko.org>  Sun, 15 Jan 2017 19:56:47 +0100

beef (1.0.1-1) unstable; urgency=low

  * New upstream release.
  * U01-fix-whatis-entry.diff:
    - merged upstream; dropped.
  * D01-tweak-build-system.diff:
    - merge all upstream build system modifications into a single patch.
  * Bump Standards-Version to 3.9.6.
  * Upload to unstable.

 -- Andrea Bolognani <eof@kiyuko.org>  Thu, 23 Oct 2014 01:11:33 +0200

beef (1.0.0-1) experimental; urgency=low

  * New upstream release. (Closes: #639247)
  * Fix watch file. (Closes: #529748)
  * U01-fix-whatis-entry.diff:
    - use the conventional format for the NAME section of the man
      page, so that programs such as whatis and apropos can parse it.
  * D01-skip-documentation-files.diff:
    - don't install duplicated documentation files.
  * D02-leave-changelog-alone.diff:
    - don't overwrite upstream changelog.
  * Switch to 3.0 (quilt) source format.
  * Switch to compat level 9.
  * Update Debian copyright file to the final version of the
    machine-readable copyright file specification.
  * Add Vcs-* control fields.
  * Bump Standards-Version to 3.9.3 (no changes needed).

 -- Andrea Bolognani <eof@kiyuko.org>  Tue, 21 Aug 2012 21:01:11 +0200

beef (0.0.6-2) unstable; urgency=low

  * Added watch file
  * Added support for DEB_BUILD_OPTIONS (noopt)
  * Don't ignore `$(MAKE) clean' errors anymore
  * Bumped Standards-Version to 3.7.3 (no changes needed)
  * Moved Homepage to the proper control field
  * Changed debian/copyright to comply with the proposed machine-interpretable
    copyright format (with some modifications)

 -- Andrea Bolognani <eof@kiyuko.org>  Sun, 17 Feb 2008 23:51:57 +0100

beef (0.0.6-1) unstable; urgency=low

  * New upstream release